[package]
name = "rust_solutions"
version = "0.1.0"
edition = "2021"
authors = ["plasticuproject <plastic@plasticuproject.com>"]
description = "Graph Algorithms for Technical Interviews"
rust-version = "1.80"

[dependencies]

[lib]
crate-type = ["lib"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
